# agenter

./: .gitignore  AGENTS.md  Cargo.toml  README.md  docker-compose.yml  justfile
crates/agenter-control-plane/: Cargo.toml
crates/agenter-control-plane/src/: api.rs  auth.rs  browser_ws.rs  http.rs  main.rs  policy.rs  runner_ws.rs  state.rs
crates/agenter-control-plane/src/api/: approval_rules.rs  approvals.rs  auth.rs  runners.rs  sessions.rs  slash.rs  ws.rs
crates/agenter-control-plane/src/api/repositories/: auth.rs  mod.rs
crates/agenter-control-plane/src/api/services/: auth.rs
crates/agenter-core/: Cargo.toml
crates/agenter-core/src/: approval.rs  events.rs  ids.rs  lib.rs  logging.rs  session.rs  slash_command.rs  workspace.rs
crates/agenter-db/: Cargo.toml
crates/agenter-db/src/: lib.rs  models.rs  repositories.rs
crates/agenter-protocol/: Cargo.toml
crates/agenter-protocol/src/: browser.rs  lib.rs  runner.rs  runner_transport.rs
crates/agenter-protocol/tests/: browser_json_frame_conformance.rs
crates/agenter-runner/: Cargo.toml
crates/agenter-runner/src/: main.rs  runner_host.rs  wal.rs
crates/agenter-runner/src/agents/: acp.rs  adapter.rs  approval_state.rs  codex.rs  codex_approval_context.rs  codex_protocol_coverage.rs  codex_turn_state.rs  mod.rs  qwen_acp.rs
crates/agenter-runner/src/agents/acp/: mod.rs
crates/agenter-runner/src/agents/codex/: codec.rs  id_map.rs  mod.rs  obligations.rs  provider_commands.rs  reducer.rs  runtime.rs  session.rs  state.rs  transport.rs  turns.rs
crates/agenter-runner/src/modes/: acp.rs  codex.rs  fake.rs  mod.rs
crates/agenter-runner/tests/: codex_protocol_coverage.rs
crates/agenter-runner/tests/fixtures/: acp_stage10_trace.json  acp_stage6_trace.json  codex_app_server_protocol_methods.rs  codex_stage10_trace.json  codex_stage6_trace.json
docker/: promtail-config.yml
docs/acp/: README.md  progress.md  provider-matrix.md
docs/acp/spikes/: gemini.md  opencode.md  qwen.md
docs/chatgpt/: 001_initial.md  002_protocol.md
docs/codex-approvals/: README.md  guardian-and-hooks.md  orchestrator-and-session.md  other-surfaces.md  policy-and-requirements.md  tui-ux.md
docs/codex-memory/: README.md  how-codex-memory-works.md
docs/decisions/: 2026-04-30-agent-history-source-of-truth.md  2026-04-30-control-plane-runner-split.md  2026-04-30-plain-svelte-spa.md  2026-04-30-provider-and-connector-boundaries.md  2026-05-01-session-usage-window-mapping.md  2026-05-02-approval-registry-reconnect-replay.md  2026-05-02-codex-approval-presentation.md  2026-05-02-generic-acp-runner-runtime.md  2026-05-02-plan-mode-implement-handoff.md  2026-05-02-runner-session-process-lifecycle.md  2026-05-03-approval-delivery-idempotency.md  2026-05-03-durable-agent-event-log.md  2026-05-03-persistent-browser-auth-sessions.md  2026-05-03-runner-local-codex-wire-logs.md  2026-05-03-universal-agent-protocol.md  2026-05-03-web-session-tabs.md  2026-05-04-approval-resolution-events.md  2026-05-04-persistent-approval-policy-rules.md  2026-05-04-runner-discovery-events-are-retryable-operations.md  2026-05-05-durable-agent-obligations.md  2026-05-05-uap2-breaking-universal-protocol.md  2026-05-05-uap2-codex-schema-gaps.md  2026-05-06-codex-approval-modes-without-agenter-sandbox.md  README.md
docs/harness/: MEMORY.md  PROJECT_CONTEXT.md  VERIFICATION.md  WORKFLOW.md
docs/plans/: 2026-04-30-initial-implementation.md  2026-05-01-composer-usage-bar.md  2026-05-02-acp-runner-support.md  2026-05-02-codex-coverage.md  2026-05-02-fix-codex-protocol.md  2026-05-02-runner-session-lifecycle.md  2026-05-02-workbench-redesign.md  2026-05-03-codex-runner-observability.md  2026-05-03-nonblocking-session-refresh.md  2026-05-03-universal-agent-protocol.md  2026-05-03-web-session-tabs.md  2026-05-04-codex-protocol-tui-parity.md  2026-05-04-persistent-approval-policy-rules.md  2026-05-04-universal-protocol-critical-assessment.md  2026-05-05-codex-app-server-uap2.md  2026-05-05-universal-only-uap2.md  2026-05-06-codex-tui-style-approvals.md  README.md
docs/runbooks/: README.md  codex-app-server-protocol-audit.md  codex-app-server-smoke.md  codex-app-server-spike.md  codex-wire-logging.md  fake-runner-browser-smoke.md  local-manual-testing.md  qwen-acp-spike.md  universal-protocol-smoke.md
docs/specs/: 2026-04-30-remote-agent-control-plane.md  2026-05-02-acp-runner-support.md  2026-05-02-runner-session-lifecycle.md  2026-05-04-persistent-approval-policy-rules.md  2026-05-05-universal-only-uap2.md  README.md
migrations/: 0001_initial.sql  0002_auth_link_codes.sql  0003_agent_turn_settings.sql  0004_session_usage_snapshot.sql  0005_session_idle_stopped_status.sql  0006_browser_auth_sessions.sql  0007_universal_agent_events.sql  0008_drop_legacy_event_cache.sql  0009_agent_session_import_fingerprint.sql  0010_approval_policy_rules.sql  0011_runner_event_receipts.sql  0012_agent_obligations.sql  0013_permission_approval_kind.sql
tmp/: debug.json
web/: eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/public/: manifest.webmanifest  sw.js
web/src/: App.svelte  main.ts  styles.css
web/src/api/: approvalRules.test.ts  approvalRules.ts  auth.ts  debug.test.ts  debug.ts  events.test.ts  events.ts  http.test.ts  http.ts  sessions.test.ts  sessions.ts  types.ts
web/src/components/: AgenterIcon.svelte  AnsiBlock.svelte  InlineEventRow.svelte  MarkdownBlock.svelte  PlanCard.svelte  PlanCard.test.ts  RawPayloadDetails.svelte  SessionTabsBar.svelte  SessionTreeSidebar.svelte  SubagentEventRow.svelte  ToastHost.svelte
web/src/lib/: ansi.test.ts  ansi.ts  chatDebugExport.test.ts  chatDebugExport.ts  chatEvents.test.ts  chatEvents.ts  markdown.test.ts  markdown.ts  normalizers.test.ts  normalizers.ts  router.test.ts  router.ts  sessionSnapshot.test.ts  sessionTabs.ts  (+10 more)
(+4 files in other folders)
