[workspace]
members = [
    "crates/agenter-core",
    "crates/agenter-protocol",
    "crates/agenter-db",
    "crates/agenter-control-plane",
    "crates/agenter-runner",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
rust-version = "1.78"

[workspace.dependencies]
agenter-core = { path = "crates/agenter-core" }
agenter-db = { path = "crates/agenter-db" }
agenter-protocol = { path = "crates/agenter-protocol" }
anyhow = "1.0"
argon2 = "0.5"
axum = "0.8"
base64 = "0.22"
chrono = "0.4"
serde = "1.0"
serde_json = "1.0"
sha2 = "0.10"
sqlx = "0.8"
thiserror = "2.0"
tokio = "1.44"
tower-http = "0.6"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = "0.3"
uuid = "1.16"
