[package]
name = "agenter-control-plane"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
agenter-core.workspace = true
agenter-protocol.workspace = true
anyhow.workspace = true
axum = { workspace = true, features = ["ws"] }
futures-util = "0.3"
serde_json.workspace = true
tokio = { workspace = true, features = ["macros", "net", "rt-multi-thread", "sync"] }
tracing.workspace = true
tracing-subscriber.workspace = true
uuid = { workspace = true, features = ["v4"] }

[dev-dependencies]
tokio-tungstenite = "0.29"
