[package]
name = "agenter-control-plane"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
agenter-core.workspace = true
agenter-db.workspace = true
agenter-protocol.workspace = true
anyhow.workspace = true
argon2.workspace = true
axum = { workspace = true, features = ["ws"] }
chrono.workspace = true
futures-util = "0.3"
rand_core = { version = "0.6", features = ["getrandom"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
sqlx = { workspace = true, features = ["postgres", "runtime-tokio"] }
tokio = { workspace = true, features = ["macros", "net", "rt-multi-thread", "sync"] }
tower-http = { workspace = true, features = ["trace"] }
tracing.workspace = true
tracing-subscriber.workspace = true
uuid = { workspace = true, features = ["v4"] }

[dev-dependencies]
tokio-tungstenite = "0.29"
tower = "0.5"
