[package]
name = "agenter-runner"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["io-util", "macros", "process", "rt-multi-thread", "time"] }
tracing.workspace = true
tracing-subscriber.workspace = true
