[package]
name = "agenter-runner"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
agenter-core.workspace = true
agenter-protocol.workspace = true
anyhow.workspace = true
futures-util = "0.3"
serde_json.workspace = true
tokio = { workspace = true, features = ["io-util", "macros", "process", "rt-multi-thread", "time"] }
tokio-tungstenite = "0.29"
tracing.workspace = true
tracing-subscriber.workspace = true
uuid = { workspace = true, features = ["v4"] }
